--- a/ethereum/1. Hardhat.md
+++ b/ethereum/1. Hardhat.md
@@ -128,7 +128,7 @@ hardhat は,javaScriptのパッケージモジュールです.
 npm install --save-dev hardhat
 ```
 
-### Hardhat の初期化 （空の設定ファイルの作成）
+### Hardhat の初期化
 
 初期化コマンド `npx hardhat init` 実行後に
 
@@ -167,27 +167,21 @@ Welcome to Hardhat v2.22.5
 
 hardhat プロジェクトのディレクトリは以下のような構成になっている
 
-```bash
-ls
-
-=>
-README.md  contracts  hardhat.config.js  ignition  node_modules  package-lock.json  package.json  test
-```
-
 ```
 tree -L 1
+
+=>
 .
 ├── README.md
-├── artifacts		← コンパイル結果
-├── cache
-├── contracts		← solidity のソースコード
-├── hardhat.config.js	← 設定ファイル
+├── contracts
+├── hardhat.config.js
 ├── ignition
 ├── node_modules
 ├── package-lock.json
 ├── package.json
-└── test			← テストプログラム
+└── test
 
+5 directories, 4 files
 ```
 
 ### 余計なファイルの削除
@@ -231,7 +225,7 @@ module.exports = {
 };
 ```
 
-* キーボード： `<ctrl¥> -x` でnano エディタを終了
+* キーボード： `<ctrl>-x` でnano エディタを終了
 
 ## <a id="compile">スマートコントラクトの作成とコンパイル</a>
 
@@ -613,12 +607,15 @@ cd hardhat/tutorial
 
 ### hardhat設定ファイル hardhat.config.js の修正
 
+* ネットワークを hardhat networkにする
+* チェインIDを 31337
+* マイニングの間隔を10秒に設定
+
 ```bash
 nano hardhat.config.js
 ```
 
 ```js
-// hardhat.config.js
 require("@nomicfoundation/hardhat-toolbox");
 
 /** @type import('hardhat/config').HardhatUserConfig */
@@ -627,10 +624,13 @@ module.exports = {
   networks: {
     hardhat: {
       chainId: 31337,
+      mining: {
+        auto: false,
+        interval: [10000, 11000]
+      }
     },
   },
 };
-
 ```
 ### hardhat node の起動
 
@@ -739,13 +739,17 @@ main().catch((error) => {
 
 ```
 
-### hardhat ネットワークへのデプロイ
+### デプロイスクリプトによる hardhat ネットワークへのデプロイ
 
 ```bash
 npx hardhat run scripts/deploy.js --network localhost
 ```
 
-コンソール側のターミナルで確認
+* コンソール側のターミナルで Token コントラクトのデプロイの確認
+* コントラクトアカウントのアドレスの確認
+* トランザクションIDの確認
+* デプロイしたアカウントのアドレスの確認
+* デプロイのために消費した Gas の確認
 
 ```bash
 eth_blockNumber
