--- a/ethereum/2. console.md
+++ b/ethereum/2. console.md
@@ -1,33 +1,15 @@
 # 2. Ethereum ブロックチェーンのコンソール操作
 
-最終更新 2024/07/30 Shigeichiro Yamasaki
+最終更新 2024/10/14 Shigeichiro Yamasaki
 
-## Hardhat node の利用
+## 前提条件
 
 * 自分の Hardhat プロジェクトのプロジェクトルートにいることを前提にします．
+* localhost で Hardhat node が稼働している
+* コントラクトが Hardhat node にデプロイ済
 
-* localhost で Hardhat node が稼働してる状態を想定します
 
-```bash
-npx hardhat node
-```
-
-### ローカルノードへのデプロイ
-
-Hardhat のチュートリアルにあるように igunition コマンドでデプロイできます
-
-```bash
-npx hardhat ignition deploy ./ignition/modules/Token.js --network localhost 
-
-=>
-...
-
-Deployed Addresses
-
-TokenModule#Token - 0x5FbDB2315678afecb367f032d93F642f64180aa3
-```
-
-### コンソールを起動する
+## hardhat console を起動して hardhat node に接続する
 
 hardhat console コマンドで node のプロンプトになります
 
@@ -37,7 +19,6 @@ npx hardhat console --network localhost
 =>
 Type ".help" for more information.
 >
-
 ```
 
 ### config オブジェクトの確認
@@ -61,6 +42,210 @@ hardhat の設定ファイルの状態
 > 
 ```
 
+## スマートコントラクトのテストプログラムの再確認
+
+デプロイしたスマートコントラクトの関数を確認する
+
+```js
+// hardhat tool box の利用
+const {loadFixture} = require("@nomicfoundation/hardhat-toolbox/network-helpers");
+// CHaiの利用
+const { expect } = require("chai");
+
+describe("トークンのコントラクト", function () {
+  async function deployTokenFixture() {
+    // 複数のテスト用アカウントの取得
+    const [owner, addr1, addr2] = await ethers.getSigners();
+    // コントラクトをデプロイする
+    const hardhatToken = await ethers.deployContract("Token");
+    // テストに有用なフィクスチャ
+    return { hardhatToken, owner, addr1, addr2 };
+  }
+
+  it("トークンの総量が所有者に割り当てられていること", async function () {
+    // フィクスチャをデプロイする
+    const { hardhatToken, owner } = await loadFixture(deployTokenFixture);
+    // オーナーの所持金額
+    const ownerBalance = await hardhatToken.balanceOf(owner.address);
+    // トークンの総額がオーナーの所持金に等しい
+    expect(await hardhatToken.totalSupply()).to.equal(ownerBalance);
+  });
+
+  it("アカウント間でトークンが転送されること", async function () {
+    // フィクスチャをデプロイする
+    const { hardhatToken, owner, addr1, addr2 } = await loadFixture(
+      deployTokenFixture
+    );
+
+    // 50トークンをオーナーから addr1 に送金する
+    await expect(
+      hardhatToken.transfer(addr1.address, 50)
+    ).to.changeTokenBalances(hardhatToken, [owner, addr1], [-50, 50]);
+
+    // 50トークンを addr1 から addr2に送金する
+    // ここではトークンの送金に .connect(signer) を利用している
+    await expect(
+      hardhatToken.connect(addr1).transfer(addr2.address, 50)
+    ).to.changeTokenBalances(hardhatToken, [addr1, addr2], [-50, 50]);
+  });
+});
+```
+
+* ”複数のテスト用アカウントの取得”
+
+```js
+> const [owner, addr1, addr2] = await ethers.getSigners();
+> owner
+HardhatEthersSigner {
+  _gasLimit: 30000000,
+  address: '0xf39Fd6e51aad88F6F4ce6aB8827279cffFb92266',
+  provider: HardhatEthersProvider {
+    _hardhatProvider: LazyInitializationProviderAdapter {
+      _providerFactory: [AsyncFunction (anonymous)],
+      _emitter: [EventEmitter],
+      _initializingPromise: [Promise],
+      provider: [BackwardsCompatibilityProviderAdapter]
+    },
+    _networkName: 'localhost',
+    _blockListeners: [],
+    _transactionHashListeners: Map(0) {},
+    _eventListeners: []
+  }
+}
+
+> const hardhatToken = await ethers.deployContract("Token");
+
+> await hardhatToken.balanceOf(owner.address);
+1000000n
+> await hardhatToken.balanceOf(owner.address);
+1000000n
+> hardhatToken.transfer(addr1.address, 50)
+Promise {
+  <pending>,
+  [Symbol(async_id_symbol)]: 4385,
+  [Symbol(trigger_async_id_symbol)]: 15
+}
+> await hardhatToken.balanceOf(owner.address);
+999950n
+> hardhatToken.connect(addr1).transfer(addr2.address, 50)
+Promise {
+  <pending>,
+  [Symbol(async_id_symbol)]: 4715,
+  [Symbol(trigger_async_id_symbol)]: 15
+}
+> hardhatToken.balanceOf(addr1.address);
+Promise {
+  <pending>,
+  [Symbol(async_id_symbol)]: 5003,
+  [Symbol(trigger_async_id_symbol)]: 15
+}
+> hardhatToken.balanceOf(addr2.address);
+Promise {
+  <pending>,
+  [Symbol(async_id_symbol)]: 5112,
+  [Symbol(trigger_async_id_symbol)]: 15
+}
+> 
+
+```
+
+* 
+
+### デプロイしたコントラクトの ABI を取得する
+
+* コンパイル結果のJSON形式ファイルから ABI を取り出す方法は説明した
+* デプロイしたコントラクトから ABI を取り出すこともできる
+
+```js
+> hardhatToken
+
+=>
+Interface {
+  fragments: [
+    ConstructorFragment {
+      type: 'constructor',
+      inputs: [],
+      payable: false,
+      gas: null
+    },
+    EventFragment {
+      type: 'event',
+      inputs: [Array],
+      name: 'Transfer',
+      anonymous: false
+    },
+    FunctionFragment {
+      type: 'function',
+      inputs: [Array],
+      name: 'balanceOf',
+      constant: true,
+      outputs: [Array],
+      stateMutability: 'view',
+      payable: false,
+      gas: null
+    },
+    FunctionFragment {
+      type: 'function',
+      inputs: [],
+      name: 'name',
+      constant: true,
+      outputs: [Array],
+      stateMutability: 'view',
+      payable: false,
+      gas: null
+    },
+    FunctionFragment {
+      type: 'function',
+      inputs: [],
+      name: 'owner',
+      constant: true,
+      outputs: [Array],
+      stateMutability: 'view',
+      payable: false,
+      gas: null
+    },
+    FunctionFragment {
+      type: 'function',
+      inputs: [],
+      name: 'symbol',
+      constant: true,
+      outputs: [Array],
+      stateMutability: 'view',
+      payable: false,
+      gas: null
+    },
+    FunctionFragment {
+      type: 'function',
+      inputs: [],
+      name: 'totalSupply',
+      constant: true,
+      outputs: [Array],
+      stateMutability: 'view',
+      payable: false,
+      gas: null
+    },
+    FunctionFragment {
+      type: 'function',
+      inputs: [Array],
+      name: 'transfer',
+      constant: false,
+      outputs: [],
+      stateMutability: 'nonpayable',
+      payable: false,
+      gas: null
+    }
+  ],
+  deploy: ConstructorFragment {
+    type: 'constructor',
+    inputs: [],
+    payable: false,
+    gas: null
+  },
+  fallback: null,
+  receive: false
+}
+```
+
 ### etheres オブジェクトの確認
 
 @nomicfoundation/hardhat-ethers としてインストール済の etheres.js のオブジェクトの状態
@@ -69,21 +254,16 @@ hardhat の設定ファイルの状態
 
 > ethers
 {
-  version: '6.13.2',
+  version: '6.13.4',
   decodeBytes32String: [Function: decodeBytes32String],
   encodeBytes32String: [Function: encodeBytes32String],
   AbiCoder: [class AbiCoder],
  
  ...
 
-  getContractAt: [Function: getContractAt],
-  getContractAtFromArtifact: [Function: getContractAtFromArtifact],
-  deployContract: [Function: bound deployContract] AsyncFunction
-}
-
 ```
 
-### ethereum との非同期の応答を受け取る方法
+### ethers.js を使って ethereum node との非同期の応答を受け取る方法
 
 javaSCript の await で非同期に受け取った内容出力すればよい
 
@@ -123,7 +303,7 @@ javaSCript の await で非同期に受け取った内容出力すればよい
 undefined
 ```
 
-配列のインデックス1 を取り出す場合
+上記の出力結果の配列のインデックス1 を取り出す場合
 
 ```js
 > (await ethers.getSigners())[1]
