--- a/ethereum/3. ethers.js.md
+++ b/ethereum/3. ethers.js.md
@@ -2,12 +2,15 @@
 
 ethereum RPC の ラッピングクライアントの使い方
 
-最終更新 2024/07/30 Shigeichiro Yamasaki
+最終更新 2024/10/14 Shigeichiro Yamasaki
 
-コンソールから実行します
+## 前提条件
 
-## ethers のAPI一覧
+* コントラクトを hardhat node にデプロイ済
+* Hardhat console を hardhat node に接続している
+* 以下，hardhat console から実行する
 
+## ethers.js のAPI一覧の表示
 
 ```js
 > ethers
