--- a/ethereum/2. console.md
+++ b/ethereum/2. console.md
@@ -1,6 +1,6 @@
 # 2. Ethereum ブロックチェーンのコンソール操作
 
-最終更新 2024/10/14 Shigeichiro Yamasaki
+最終更新 2024/10/15 Shigeichiro Yamasaki
 
 ## 前提条件
 
@@ -44,7 +44,8 @@ hardhat の設定ファイルの状態
 
 ## スマートコントラクトのテストプログラムの再確認
 
-デプロイしたスマートコントラクトの関数を確認する
+デプロイしたスマートコントラクトのテストを再確認する
+（実行はしない）
 
 ```js
 // hardhat tool box の利用
@@ -91,7 +92,11 @@ describe("トークンのコントラクト", function () {
 });
 ```
 
-* ”複数のテスト用アカウントの取得”
+## コンソールからの操作
+
+テストと同様のことをコンソールから実施してみる
+
+### 複数のテスト用アカウントの取得
 
 ```js
 > const [owner, addr1, addr2] = await ethers.getSigners();
@@ -113,43 +118,86 @@ HardhatEthersSigner {
   }
 }
 
-> const hardhatToken = await ethers.deployContract("Token");
-
-> await hardhatToken.balanceOf(owner.address);
-1000000n
-> await hardhatToken.balanceOf(owner.address);
-1000000n
-> hardhatToken.transfer(addr1.address, 50)
-Promise {
-  <pending>,
-  [Symbol(async_id_symbol)]: 4385,
-  [Symbol(trigger_async_id_symbol)]: 15
-}
-> await hardhatToken.balanceOf(owner.address);
-999950n
-> hardhatToken.connect(addr1).transfer(addr2.address, 50)
-Promise {
-  <pending>,
-  [Symbol(async_id_symbol)]: 4715,
-  [Symbol(trigger_async_id_symbol)]: 15
-}
-> hardhatToken.balanceOf(addr1.address);
-Promise {
-  <pending>,
-  [Symbol(async_id_symbol)]: 5003,
-  [Symbol(trigger_async_id_symbol)]: 15
-}
-> hardhatToken.balanceOf(addr2.address);
-Promise {
-  <pending>,
-  [Symbol(async_id_symbol)]: 5112,
-  [Symbol(trigger_async_id_symbol)]: 15
-}
-> 
-
 ```
 
-* 
+### コントラクトをあらためてデプロイする
+
+hardhat network ノードのログをチェックし，トランザクションの発出などを見ておく
+
+```js
+> const hardhatToken = await ethers.deployContract("Token");
+```
+
+### トークン残高の確認
+
+状態変数の参照
+
+```js
+> await hardhatToken.balanceOf(owner.address);
+1000000n
+```
+
+### トークンの送金
+
+hardhat network ノードのログをチェックし，トランザクションの発出などを見ておく
+
+```js
+> await hardhatToken.transfer(addr1.address, 50)
+
+=>
+ContractTransactionResponse {
+  provider: HardhatEthersProvider {
+    _hardhatProvider: LazyInitializationProviderAdapter {
+      _providerFactory: [AsyncFunction (anonymous)],
+      _emitter: [EventEmitter],
+      _initializingPromise: [Promise],
+      provider: [BackwardsCompatibilityProviderAdapter]
+    },
+    _networkName: 'localhost',
+    _blockListeners: [],
+    _transactionHashListeners: Map(0) {},
+    _eventListeners: []
+  },
+  blockNumber: 6,
+  blockHash: '0x444136e20773a5e89699d2c86be0e94a488339aec5033f9ea9340f5467226ec6',
+  index: undefined,
+  hash: '0x683fc63e4e4f65f9b2a3daa915444e262e889431bb76213e480cfbea53b3a2a4',
+  type: 2,
+  to: '0xCf7Ed3AccA5a467e9e704C703E8D87F634fB0Fc9',
+  from: '0xf39Fd6e51aad88F6F4ce6aB8827279cffFb92266',
+  nonce: 4,
+  gasLimit: 30000000n,
+  gasPrice: 578683727n,
+  maxPriorityFeePerGas: 137987052n,
+  maxFeePerGas: 578683727n,
+  maxFeePerBlobGas: null,
+  data: '0xa9059cbb00000000000000000000000070997970c51812dc3a010c7d01b50e0d17dc79c80000000000000000000000000000000000000000000000000000000000000032',
+  value: 0n,
+  chainId: 31337n,
+  signature: Signature { r: "0xbdd26dc9b29e38b6eca05ef1700c21ea320c1e52e141481419d9be5c0bd0e4fa", s: "0x093cdfd9d9b69ae5d4286fac8631120372b806166788bcd783bdec201807e949", yParity: 1, networkV: null },
+  accessList: [],
+  blobVersionedHashes: null
+}
+```
+
+状態変数の確認
+
+```js
+> await hardhatToken.balanceOf(owner.address);
+999950n
+```
+
+### トークンの送金(addr1 → addr2)
+
+```js
+> await hardhatToken.connect(addr1).transfer(addr2.address, 50)
+
+> await hardhatToken.balanceOf(addr1.address);
+0n
+> await hardhatToken.balanceOf(addr2.address);
+50n
+```
+
 
 ### デプロイしたコントラクトの ABI を取得する
 
