--- a/ethereum/5. ERC20.md
+++ b/ethereum/5. ERC20.md
@@ -126,11 +126,12 @@ npx hardhat init
 ```bash
 rm contracts/Lock.sol
 rm test/Lock.js
+rm ignition/modules/Lock.js
 ```
 
 ## hardhat へのOpenZeppelin のライブラリのインストール
 
-プロジェクトルートに移動してモジュールをインストール
+プロジェクトルートに移動してへのOpenZeppelinコントタクトのモジュールをインストール
 
 ```bash
 npm install  --save-dev @openzeppelin/contracts
@@ -138,10 +139,10 @@ npm install  --save-dev @openzeppelin/contracts
 
 ## ERC-20 コントラクトの作成
 
-* Token20 という名前にする
+* JPQ という名前にする
 
 ```bash
-nano contracts/Token20.sol
+nano contracts/JPQ.sol
 ```
 
 このコントラクトは、name、symbol、initialSupply（初期供給量）を引数に取り、デプロイ時にトークンの全量をデプロイアドレスにミントします。
@@ -152,23 +153,10 @@ pragma solidity ^0.8.0;
 
 import "@openzeppelin/contracts/token/ERC20/ERC20.sol";
 
-import {ERC20} from "@openzeppelin/contracts/token/ERC20/ERC20.sol";
-// ERC20 を継承
-contract Token20 is ERC20{
-    // コントラクトのオーナー
-    address public owner;
-    // コンストラクタ
-    constructor(uint initialSupply) ERC20("Token20", "T20") {
-        owner = msg.sender;
-        _mint(owner,initialSupply);
+contract JPQ is ERC20 {
+    constructor(uint256 initialSupply) ERC20("JPQ", "JPQ") {
+        _mint(msg.sender, initialSupply);
     }
-
-    function Mint(address _to, uint _amount) public {
-      _mint(_to, _amount);
-      emit MintEvent(_to, _amount);
-    }
-
-    event MintEvent(address indexed to, uint256 indexed amount);
 }
 
 ```
