--- a/ethereum/5. ERC20.md
+++ b/ethereum/5. ERC20.md
@@ -2,7 +2,7 @@
 
 OpenZeppelin のライブラリを利用した ERC20トークンを処理するコントラクト
 
-最終更新 2024/10/20 Shigeichiro Yamasaki
+最終更新 2024/10/28 Shigeichiro Yamasaki
 
 ## ERC-20の仕様
 
@@ -139,13 +139,16 @@ npm install  --save-dev @openzeppelin/contracts
 
 ## ERC-20 コントラクトの作成
 
-* JPQ という名前にする
+* ここでは，仮にトークン名を JPQ としますが，好きな名前にしてください
 
 ```bash
 nano contracts/JPQ.sol
 ```
 
 このコントラクトは、name、symbol、initialSupply（初期供給量）を引数に取り、デプロイ時にトークンの全量をデプロイアドレスにミントします。
+
+以下のコントラクトは，OpenZeppelin のサンプルを利用しています．
+[https://docs.openzeppelin.com/contracts/4.x/erc20](https://docs.openzeppelin.com/contracts/4.x/erc20)
 
 ```js
 // SPDX-License-Identifier: MIT
@@ -154,7 +157,7 @@ pragma solidity ^0.8.0;
 import "@openzeppelin/contracts/token/ERC20/ERC20.sol";
 
 contract JPQ is ERC20 {
-    constructor(uint256 initialSupply) ERC20("JPQ", "JPQ") {
+    constructor(uint256 initialSupply) ERC20("stable coin for JPY", "JPQ") {
         _mint(msg.sender, initialSupply);
     }
 }
@@ -220,10 +223,10 @@ async function main() {
   console.log("デプロイ主体のアカウント:", deployer.address);
 
   // トークン名，トークンの総供給量を指定してコントラクトをデプロイする
-  const Token20 = await hre.ethers.deployContract("Token20",[1000]);
-  await Token20.waitForDeployment();
+  const JPQ = await hre.ethers.deployContract(1000);
+  await JPQ.waitForDeployment();
 
-  console.log("オーナー:", Token20.address);
+  console.log("オーナー:", JPQ.address);
 }
 
 main()
@@ -238,6 +241,14 @@ main()
 
 ```bash
 npx hardhat run scripts/deploy.js --network localhost
+```
+
+## コンソールからの操作
+
+### コンソールの起動
+
+```bash
+npx hardhat console --network localhost 
 ```
 
 ## テストプログラム
