--- a/ethereum/5. ERC20.md
+++ b/ethereum/5. ERC20.md
@@ -212,7 +212,8 @@ cd hardhat/erc20
 
 mkdir scripts
 
-nado scripts/deploy.js
+nano scripts/deploy.js
+
 ```
 
 ```js
@@ -223,7 +224,7 @@ async function main() {
   console.log("デプロイ主体のアカウント:", deployer.address);
 
   // トークン名，トークンの総供給量を指定してコントラクトをデプロイする
-  const JPQ = await hre.ethers.deployContract(1000);
+  const JPQ = await hre.ethers.deployContract("JPQ",[1000]);
   await JPQ.waitForDeployment();
 
   console.log("オーナー:", JPQ.address);
