--- a/ethereum/1. Hardhat.md
+++ b/ethereum/1. Hardhat.md
@@ -2,7 +2,7 @@
 
 Ethereum の開発環境
 
-2024/10/14
+2024/10/30
 作成，更新 Shigeichiro Yamasaki
 
 * [環境のセットアップ](#setup)
@@ -31,7 +31,7 @@ nvm install --lts
 node -v
 
 =>
-v20.18.0
+v22.11.0
 ```
 * VS code のインストール
 
@@ -60,7 +60,7 @@ nvm install --lts
 node -v
 
 =>
-v20.18.0
+v22.11.0
 ```
 
 * VS code のインストール
@@ -193,6 +193,7 @@ hardhat は Lock という名前のサンプルのスマートコントラクト
 ```bash
 rm contracts/Lock.sol
 rm test/Lock.js
+rm ignition/modules/Lock.js
 ```
 ### hardhat のTask 
 
@@ -209,10 +210,8 @@ Nothing to compile
 
 ####  hardhat.config.js ファイルの確認
 
-* nano エディタでファイルを開く
-
 ```bash
-nano hardhat.config.js
+cat hardhat.config.js
 ```
 * ファイルの内容
 
@@ -224,8 +223,6 @@ module.exports = {
   solidity: "0.8.27",
 };
 ```
-
-* キーボード： `<ctrl>-x` でnano エディタを終了
 
 ## <a id="compile">スマートコントラクトの作成とコンパイル</a>
 
