--- a/ethereum/5. ERC20.md
+++ b/ethereum/5. ERC20.md
@@ -150,6 +150,10 @@ nano contracts/JPQ.sol
 以下のコントラクトは，OpenZeppelin のサンプルを利用しています．
 [https://docs.openzeppelin.com/contracts/4.x/erc20](https://docs.openzeppelin.com/contracts/4.x/erc20)
 
+* コントラクトの継承とコンストラクタの間接的初期化
+
+OpenZeppelin の ERC20 コントラクトを継承して新しいコントラクトを定義するが，そのコンストラクタでは親コントラクトの初期化も必要になる
+
 ```js
 // SPDX-License-Identifier: MIT
 pragma solidity ^0.8.0;
@@ -157,6 +161,7 @@ pragma solidity ^0.8.0;
 import "@openzeppelin/contracts/token/ERC20/ERC20.sol";
 
 contract JPQ is ERC20 {
+  // ERC20 コントラクトのコンストラクタ(name, symbol,decimals)
     constructor(uint256 initialSupply) ERC20("stable coin for JPY", "JPQ") {
         _mint(msg.sender, initialSupply);
     }
@@ -224,7 +229,7 @@ async function main() {
   console.log("デプロイ主体のアカウント:", deployer.address);
 
   // トークン名，トークンの総供給量を指定してコントラクトをデプロイする
-  const JPQ = await hre.ethers.deployContract("JPQ",[1000]);
+  const JPQ = await hre.ethers.deployContract("JPQ",[10000]);
   await JPQ.waitForDeployment();
 
   console.log("オーナー:", JPQ.address);
@@ -244,6 +249,20 @@ main()
 npx hardhat run scripts/deploy.js --network localhost
 ```
 
+* ログの確認
+
+コントラクトアドレスを確認する
+
+```js
+Mined block #15
+  Block: 0xfe411f3055b0a05ae0631c62e22cf5eb912697ff0f21a5eb549ffc0a6f78fd0e
+    Base fee: 134933816
+    Transaction:           0x3e5ea77d415262ee437ff2615bc26d29d6aa2afa3b9320d0ba5bd6f18329975b
+      Contract deployment: JPQ
+      Contract address:    0x5fbdb2315678afecb367f032d93f642f64180aa3
+      From:                0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266
+      Value:               0 ETH
+```
 ## コンソールからの操作
 
 ### コンソールの起動
@@ -252,11 +271,73 @@ npx hardhat run scripts/deploy.js --network localhost
 npx hardhat console --network localhost 
 ```
 
-## テストプログラム
-
-```bash
-nano test/Token20.js
-```
+### ERC20 コントラクトへの操作
 
 ```js
+> const contract_addr = "0x5fbdb2315678afecb367f032d93f642f64180aa3"
+
+> const factory = await ethers.getContractFactory("JPQ")
+
+// 当該コントラクトアドレスのコントラクトに接続する
+> const contract = await factory.attach(contract_addr)
+
+// EOAのアドレス
+> const [owner, addr1, addr2] = await ethers.getSigners();
+
+// トークンの総供給量
+> await contract.totalSupply()
+10000n
+// owner のトークン保有量
+> await contract.balanceOf(owner)
+10000n
 ```
+
+* トークンの送付
+
+```js
+> await contract.transfer(addr1,80)
+
+ContractTransactionResponse {
+  provider: HardhatEthersProvider {
+    _hardhatProvider: LazyInitializationProviderAdapter {
+      _providerFactory: [AsyncFunction (anonymous)],
+      _emitter: [EventEmitter],
+      _initializingPromise: [Promise],
+      provider: [BackwardsCompatibilityProviderAdapter]
+    },
+    _networkName: 'localhost',
+    _blockListeners: [],
+    _transactionHashListeners: Map(0) {},
+    _eventListeners: []
+  },
+  blockNumber: null,
+  blockHash: null,
+  index: undefined,
+  hash: '0xbc2b76de415a4f011281bfff230f5e61940948bbfd1ad74d95f9f1bd59c89708',
+  type: 2,
+  to: '0x5FbDB2315678afecb367f032d93F642f64180aa3',
+  from: '0xf39Fd6e51aad88F6F4ce6aB8827279cffFb92266',
+  nonce: 1,
+  gasLimit: 30000000n,
+  gasPrice: 1000029309n,
+  maxPriorityFeePerGas: 1000000000n,
+  maxFeePerGas: 1000029309n,
+  maxFeePerBlobGas: null,
+  data: '0xa9059cbb00000000000000000000000070997970c51812dc3a010c7d01b50e0d17dc79c80000000000000000000000000000000000000000000000000000000000000050',
+  value: 0n,
+  chainId: 31337n,
+  signature: Signature { r: "0x8dae5f316cb297fda990307e413eb54cfc1a2ab5f79e9ee2175e1c70e44d6588", s: "0x0babb59232476fb837d549135d61f8d9ac97d758501a31c20b63014e9167f191", yParity: 0, networkV: null },
+  accessList: [],
+  blobVersionedHashes: null
+}
+```
+
+* アカウントのトークン保有残高の確認
+
+```js
+> await contract.balanceOf(owner)
+9920n
+> await contract.balanceOf(addr1)
+80n
+```
+
