--- a/ethereum/5. ERC20.md
+++ b/ethereum/5. ERC20.md
@@ -1,4 +1,4 @@
-# 5. ERC20 トークン
+# 5. ERC20 トークンの作成と利用
 
 OpenZeppelin のライブラリを利用した ERC20トークンを処理するコントラクト
 
@@ -341,3 +341,102 @@ ContractTransactionResponse {
 80n
 ```
 
+## ERC20を利用するコントラクト
+
+###  Eth でトークンを販売するコントラクト
+
+1.	トークン購入者はETHを支払い、トークンを受け取る。
+2.	トークンの売り手は、コントラクトが指定する量のトークンをtransferFrom関数を使って購入者に送る。
+3.	レートは1ETHあたりのトークン量として決めます。
+
+```bash
+nano contracts/TokenSale.sol
+```
+
+```js
+// SPDX-License-Identifier: MIT
+pragma solidity ^0.8.0;
+
+// JPQ(ERC20)コントラクトを利用するためのインターフェース定義
+interface JPQ {
+    function transferFrom(address sender, address recipient, uint256 amount) external returns (bool);
+    function balanceOf(address account) external view returns (uint256);
+}
+// トークン販売コントラクト
+contract TokenSale {
+    JPQ public token;
+    address public seller;
+    uint256 public rate; // 1 ETHあたりのトークン数
+    // _token:JPQコントラクト，_seller:販売者, _rate:交換比率
+    constructor(JPQ _token, address _seller, uint256 _rate) {
+        token = _token;
+        seller = _seller;
+        rate = _rate;
+    }
+
+    function buyTokens() public payable {
+        require(msg.value > 0, "ETH must be greater than 0");
+
+        // 購入トークン量の計算
+        uint256 tokenAmount = msg.value * rate;
+
+        // 売り手に十分なトークンがあるか確認
+        require(token.balanceOf(seller) >= tokenAmount, "Seller does not have enough tokens");
+
+        // 売り手から購入者へのトークン送信
+        require(token.transferFrom(seller, msg.sender, tokenAmount), "Token transfer failed");
+    }
+
+    // 売り手がETHを引き出すための関数
+    function withdrawETH() public {
+        require(msg.sender == seller, "Only seller can withdraw");
+        payable(seller).transfer(address(this).balance);
+    }
+}
+```
+
+* コンパイル
+
+```bash
+npx hardhat compile
+```
+
+### デプロイスクリプト
+
+```bash
+nano scripts/deploy.js
+```
+
+```bash
+const hre = require("hardhat");
+
+async function main() {
+  const [deployer] = await hre.ethers.getSigners();
+  console.log("デプロイ主体のアカウント:", deployer.address);
+
+  // トークン名，トークンの総供給量を指定してコントラクトをデプロイする
+  const JPQ = await hre.ethers.deployContract("JPQ",[10000]);
+  await JPQ.waitForDeployment();
+  console.log("JPQのオーナー:", JPQ.address);
+
+  // トークン販売コントラクトをデプロイする
+  //    (1ETH = 408000円 = 408000JPQ)
+  const TokenSale = await hre.ethers.deployContract("TokenSale",[deployer.address, 408000]);
+  await TokenSale.waitForDeployment();
+  console.log("TokenSaleのオーナー:", TokenSale.address);
+}
+
+main()
+  .then(() => process.exit(0))
+  .catch((error) => {
+    console.error(error);
+    process.exit(1);
+  });
+
+```
+
+### ローカルノードへのデプロイ
+
+```bash
+npx hardhat run scripts/deploy.js --network localhost
+```
