--- a/ethereum/1. Hardhat.md
+++ b/ethereum/1. Hardhat.md
@@ -2,7 +2,7 @@
 
 Ethereum の開発環境
 
-2024/10/30
+2024/11/02
 作成，更新 Shigeichiro Yamasaki
 
 * [環境のセットアップ](#setup)
@@ -22,7 +22,7 @@ Ethereum の開発環境
 ```bash
 sudo apt update
 sudo apt upgrade -y
-sudo apt install curl git
+sudo apt install curl git tree
 curl https://raw.githubusercontent.com/creationix/nvm/master/install.sh | bash
 source ~/.profile
 
@@ -50,7 +50,7 @@ sudo apt install tree
 ```bash
 brew update
 brew upgrade
-brew install curl git
+brew install curl git tree
 source $(brew --prefix nvm)/nvm.sh
 echo 'source $(brew --prefix nvm)/nvm.sh' >> ~/.zprofile
 source ~/.zprofile
@@ -128,6 +128,7 @@ hardhat は,javaScriptのパッケージモジュールです.
 npm install --save-dev hardhat
 ```
 
+
 ### Hardhat の初期化
 
 初期化コマンド `npx hardhat init` 実行後に
@@ -199,30 +200,19 @@ rm ignition/modules/Lock.js
 
 コンパイルなど Hardhat のコマンドラインから実行する処理のこと
 
-例 compile タスクの実行
+実行形式  `npx hardhat <タスク>` 
 
-```bash
-npx hardhat compile
+* clean   :           	キャッシュや artifacts の全データの消去
+* compile :          プロジェクト全体のコンパイルとartifactsの構築
+* console :          hardhat console の起動
+* coverage:         テストのためのコードの適用範囲のレポート表示
+* flatten :          	依存関係のあるコントラクトコードをすべてフラットに出力
+* node    :          	Hardhat Networkに対するJSON-RPC server の起動
+* run     :          	ユーザ定義のスクリプトの実行
+* test    :          	mocha test の実行
+* verify  :           Etherscan や Sourcify を利用したコントラクトの検証
+* ignition:		        hardhat Ignitionを利用したコントラクトのデプロイ
 
-=>
-Nothing to compile
-```
-
-####  hardhat.config.js ファイルの確認
-
-```bash
-cat hardhat.config.js
-```
-* ファイルの内容
-
-```js
-require("@nomicfoundation/hardhat-toolbox");
-
-/** @type import('hardhat/config').HardhatUserConfig */
-module.exports = {
-  solidity: "0.8.27",
-};
-```
 
 ## <a id="compile">スマートコントラクトの作成とコンパイル</a>
 
@@ -252,7 +242,7 @@ pragma solidity ^0.8.0;
 contract Token {
     // トークンのタイプとシンボル名
     string public name = "Kindai Token";
-    string public symbol = "KT";
+    string public symbol = "KDT";
     // トークンの総量
     uint256 public totalSupply = 1000000;
     // オーナーのアドレス
@@ -299,6 +289,8 @@ contract Token {
 }
 ```
 
+nano エディタの操作
+
 * キーボード：`<ctrl o>` で保存先ファイル名を確認して `<Enter>` で保存
 * キーボード：`<ctrl x>` で nano エディタ終了
 
@@ -316,9 +308,9 @@ Compiled 1 Solidity file successfully (evm target: paris).
 
 #### artifacts ディレクトリ
 
-* コンパイル結果はartifacts ディレクトリに格納されます
+* コンパイル結果のABIやバイトコードなどのオブジェクトは artifacts ディレクトリに格納されます
 
-artifacts ディレクトリ以下を3階層まで木構造表示させる
+artifacts ディレクトリ以下を3階層まで木構造表示させると以下のような構造が見えます
 
 ```bash
  tree artifacts -L 3 
@@ -773,3 +765,43 @@ eth_sendTransaction
   Block #1:            0x313780e83fdd73b03f9609706176d2c91e6a5f90c373af6277903ed69a9ad19d
 ```
 
+## hardhat ignition を利用したコントラクトのデプロイ
+
+デプロイスクリプトの抽象化して，デプロイスクリプトをモジュールとして，宣言的にデプロイを記述する
+
+### デプロイモジュール
+
+```bash
+nano ignition/modules/Token.js
+```
+
+```js
+const { buildModule } = require("@nomicfoundation/hardhat-ignition/modules");
+
+// モジュール名
+module.exports = buildModule("Token", (m) => {
+  // コントラクト名
+  const contract = m.contract("Token", []);
+  return { contract };
+});
+```
+
+### デプロイの実行
+
+```bash
+npx hardhat ignition deploy ignition/modules/Token.js --network localhost
+```
+
+### ログ
+
+```bash
+Mined block #42
+  Block: 0x2636fb5d14784f2a3f5ce41a835315272b408049a351baf3b7ffd892d0cf3039
+    Base fee: 3688905
+    Transaction:           0x3368a9b026beb7009cf48d17e26617876ef3ad34aadb1eb301d4a23b32fc792c
+      Contract deployment: Token
+      Contract address:    0xe7f1725e7734ce288f8367e1bb143e90bb3f0512
+      From:                0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266
+      Value:               0 ETH
+      Gas used:            620478 of 620478
+```
