--- a/ethereum/5. ERC20.md
+++ b/ethereum/5. ERC20.md
@@ -2,7 +2,7 @@
 
 OpenZeppelin のライブラリを利用した ERC20トークンを処理するコントラクト
 
-最終更新 2024/11/02  Shigeichiro Yamasaki
+最終更新 2024/11/05  Shigeichiro Yamasaki
 
 ## ERC-20の仕様
 
@@ -292,7 +292,7 @@ module.exports = {
 npx hardhat node
 ```
 
-## hardhat ignition によるデプロイモジュールの作成
+### hardhat ignition によるデプロイモジュールの作成
 
 * 別のターミナルのプロジェクトルートからの操作
 * scripts ディレクトリを作成
@@ -385,7 +385,6 @@ npx hardhat console --network localhost
 
 ```js
 > await JPQ.transfer(addr1,8000000)
-
 ```
 
 * アカウントのトークン保有残高の確認
@@ -393,10 +392,41 @@ npx hardhat console --network localhost
 ```js
 > await JPQ.balanceOf(owner)
 99992000000n
+
 > await JPQ.balanceOf(addr1)
 8000000n
 ```
 
+* addr1 にトークン送金を承認する
+
+```js
+> await JPQ.approve(addr1,1000)
+
+ContractTransactionResponse {
+  provider: HardhatEthersProvider {
+
+...
+}
+```
+
+* addr1 に承認された owner のトークンの引き出し可能金額
+
+```js
+> await JPQ.allowance(owner, addr1)
+1000n
+```
+
+* addr1 が owner の代理で addr2 にトークンを送金する
+
+```js
+> await JPQ.transferFrom(addr1,addr2,100)
+
+ContractTransactionResponse {
+  provider: HardhatEthersProvider {
+
+...
+}
+```
 
 ## メタマスク
 
@@ -411,7 +441,12 @@ npx hardhat console --network localhost
 * コントラクトアドレスを入力
 * トークンボタンをクリック
 
-## Faucet : ERC20トークンを Eth で購入するコントラクトの作成
+## Payable: Eth で支払い可能なコントラクトの作成
+
+1. コントラクトが Eth を受取可能にする
+2. コントラクトが所有する Eth を引き出し可能にする
+ 
+### 作成
 
 * 新しいターミナルを開いて以下を実行
 * プロジェクトルートに移動
@@ -419,93 +454,198 @@ npx hardhat console --network localhost
 ```bash
 cd ~/hardhat/erc20
 ```
-###  Eth でトークンを販売するコントラクトの作成手順
-
-1.	トークン購入者はETHを支払い、トークンを受け取る。
-2.	トークンの売り手は、コントラクトが指定する量のトークンをtransferFrom関数を使って購入者に送る。
-3.	レートは1ETHあたりのトークン量として決めます。
 
 ### コントラクトのコード
 
 ```bash
-nano contracts/Faucet.sol
+nano contracts/EthWallet.sol
 ```
 
 ```js
 // SPDX-License-Identifier: MIT
-pragma solidity ^0.8.17;
-import "./JPYcoin.sol";
-contract Faucets {
-    mapping(address => uint256) userNextBuyTime;
-    uint256 private immutable buyTimeLimit;
-    CWMToken private immutable cwmToken;
+pragma solidity ^0.8.0;
 
-    constructor(address tokenAddress, uint256 _buyTimeLimit) {
-        cwmToken = CWMToken(tokenAddress);
-        buyTimeLimit = _buyTimeLimit;
+contract EthWallet {
+    address public owner;
+
+    constructor() {
+        owner = msg.sender; // コントラクトをデプロイしたアドレスを所有者として設定
     }
-    function requestTokens() public {
-        require(msg.sender != address(0), "Cannot send token zero address");
-        require(
-            block.timestamp > userNextBuyTime[msg.sender],
-            "Your next request time is not reached yet"
-        );
-        require(
-            cwmToken.transfer(msg.sender, 10 ether),
-            "requestTokens(): Failed to Transfer"
-        );
-        userNextBuyTime[msg.sender] = block.timestamp + buyTimeLimit;
+
+    // コントラクトにETHを送信するための関数
+    receive() external payable {
+        // 受け取ったETHは自動的にコントラクトの残高に加算されます
     }
-    function getNextBuyTime() public view returns (uint256) {
-        return userNextBuyTime[msg.sender];
+
+    // 所有者のみがコントラクトのETHを引き出せるようにする関数
+    function withdraw(uint256 amount) public {
+        require(msg.sender == owner, "Only owner can withdraw");
+        require(amount <= address(this).balance, "Insufficient balance");
+
+        // コントラクトから指定した量のETHを所有者に転送
+        payable(owner).transfer(amount);
+    }
+
+    // コントラクトの残高を確認する関数
+    function getBalance() public view returns (uint256) {
+        return address(this).balance;
     }
 }
+```
 
 
-------------------------
+### hardhat ignition によるデプロイモジュールの作成
+
+```bash
+nano ignition/modules/EthWallet.js
+```
+
+
+```js
+const { buildModule } = require("@nomicfoundation/hardhat-ignition/modules");
+
+module.exports = buildModule("EthWallet", (m) => {
+  const contract = m.contract("EthWallet", []);
+  return { contract };
+});
+```
+
+### ローカルノードへのデプロイ
+
+```bash
+npx hardhat ignition deploy ignition/modules/EthWallet.js --network localhost
+
+=>
+Batch #1
+  Executed EthWallet#EthWallet
+
+[ EthWallet ] successfully deployed 🚀
+
+Deployed Addresses
+
+JPYcoin#JPYcoin - 0x5FbDB2315678afecb367f032d93F642f64180aa3
+EthWallet#EthWallet - 0xe7f1725E7734CE288F8367e1Bb143E90bb3F0512
+```
+
+* ログの確認
+
+コントラクトアドレスを確認する
+
+```js
+Mined block #4325
+  Block: 0x588516f8eb933be9039f0e72b9f12b9aa5d722626d39f35231a1c3dceae58a01
+    Base fee: 7
+    Transaction:           0xf448d80102f4a75b6dad6cb0e7a3527f4d1f99f3196c1badbe93b8330ff198cb
+      Contract deployment: EthWallet
+      Contract address:    0xe7f1725e7734ce288f8367e1bb143e90bb3f0512
+      From:                0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266
+      Value:               0 ETH
+      Gas used:            308401 of 308401
+```
+
+### メタマスクで EthWallet へ Eth を送金
+
+* メタマスク（ローカルノードに接続）のアカウントの残高を確認
+* EthWallet のコントラクトアドレスを宛先にして 1 Eth 程度送金する
+* 「送金」後「確認」ボタンをクリックして完了を待つ
+
+### コンソールからの操作
+
+```js
+> const EthWallet = "0xe7f1725E7734CE288F8367e1Bb143E90bb3F0512"
+undefined
+> const EthWalletFactory = await ethers.getContractFactory("EthWallet")
+undefined
+> const EW =  await EthWalletFactory.attach(EthWallet)
+undefined
+
+// EthWallet コントラクトの保有残高を表示する
+> await EW.getBalance()
+1000000000000000000n
+
+> const [owner, addr1, addr2] = await ethers.getSigners();
+
+// コントラクトの所持金を引き出す
+> await EW.withdraw(100)
+
+ContractTransactionResponse {
+  provider: HardhatEthersProvider {
+    _hardhatProvider: LazyInitializationProviderAdapter {
+
+...
+}
+
+> await EW.getBalance()
+999999999999999900n
+```
+
+
+## Faucet : ERC20トークンを Eth で購入するコントラクトの作成
+
+###  Eth でトークンを販売するコントラクトの作成手順
+
+1. コントラクトがETHを支払い可能
+2. コントラクトが所有する Eth をオーナーのみが引き出し可能
+2. トークンを受け取り可能
+2. コントラクトが所有するトークンを transferFrom 関数を使って購入者に送る。
+3. トークンとのレートは 1ETH あたりのトークン量として決める
+
+### 作成
+
+* 新しいターミナルを開いて以下を実行
+* プロジェクトルートに移動
+
+```bash
+cd ~/hardhat/erc20
+```
+
+### コントラクトのコード
+
+```bash
+nano contracts/JPYFaucet.sol
+```
+
+```js
 // SPDX-License-Identifier: MIT
 pragma solidity ^0.8.0;
 
 // OpenZeppelinのライブラリをインポートする
 import "@openzeppelin/contracts/token/ERC20/ERC20.sol";
 
-// JPYcoin (ERC20)コントラクトを利用するためのインターフェース定義
-interface JPYcoin {
-    function approve(address _spender, uint256 _amount) external returns (bool);
-    function transferFrom(address _sender, address _recipient, uint256 _amount) external returns (bool);
-    function balanceOf(address _account) external view returns (uint256);
-}
-// トークン販売コントラクト
-contract Faucet {
-    JPYcoin public token;  // トークンコントラクト
-    address public seller;
-    uint256 public rate; // 1 ETHあたりのトークン数
-    // _token:JPQコントラクト，_seller:販売者, _rate:交換比率
-    constructor(JPYcoin _token, address _seller, uint256 _rate) {
+contract JPYFaucet {
+    JPYcoin private token;
+    address public owner;
+    uint256 public rate; // 1ETH あたりのトークン
+
+    constructor(JPYcoin _token, uint256 _rate) {
         token = _token;
-        seller = _seller;
         rate = _rate;
+        owner = msg.sender; // コントラクトをデプロイしたアドレスを所有者として設定
     }
 
+    // コントラクトにETHを送信するための関数
+    // この ETH はトークン購入の代金になるので，ETHを受領すると購入者にJPYトークンを代理送金します
     function buyTokens() public payable {
         require(msg.value > 0, "ETH must be greater than 0");
-
         // 購入トークン量の計算
         uint256 tokenAmount = msg.value * rate;
-
         // 売り手に十分なトークンがあるか確認
-        require(token.balanceOf(seller) >= tokenAmount, "Seller does not have enough tokens");
-
+        require(token.balanceOf(owner) >= tokenAmount, "Seller does not have enough tokens");
         // 売り手から購入者へのトークン送信
-        require(token.transferFrom(seller, msg.sender, tokenAmount), "Token transfer failed");
+        require(token.transferFrom(owner, msg.sender, tokenAmount), "Token transfer failed");
     }
-
     // 売り手がETHを引き出すための関数
     function withdrawETH() public {
-        require(msg.sender == seller, "Only seller can withdraw");
-        payable(seller).transfer(address(this).balance);
+        require(msg.sender == owner, "Only owner can withdraw");
+        payable(owner).transfer(address(this).balance);
+    }
+    // コントラクトの残高を確認する関数
+    function getBalance() public view returns (uint256) {
+        return address(this).balance;
     }
 }
+
+
 ```
 
 * コンパイル
@@ -514,63 +654,39 @@ contract Faucet {
 npx hardhat compile
 ```
 
-* コンパイル結果の確認
+
+### hardhat ignition によるデプロイモジュールの作成
 
 ```bash
-$ tree artifacts -L 2
-artifacts
-├── @openzeppelin
-│   └── contracts
-├── build-info
-│   ├── 2ae430f2ba62aa8c55e3286f30a23bfa.json
-│   └── f11e0b5074104693541d5d2ffe9da1b7.json
-└── contracts
-    ├── JPQ.sol
-    └── TokenSale.sol
-
-7 directories, 2 files
+nano ignition/modules/JPYFaucet.js
 ```
 
-### デプロイスクリプト
-
-```bash
-nano scripts/deploy2.js
-```
 
 ```js
-const hre = require("hardhat");
+const { buildModule } = require("@nomicfoundation/hardhat-ignition/modules");
 
-// デプロイを実施する非同期関数
-async function main() {
-  const [deployer] = await hre.ethers.getSigners();
-  console.log("デプロイ主体のアドレス:", deployer.address);
+const JPYcoin = "0x5fbdb2315678afecb367f032d93f642f64180aa3"
 
-  // トークン名，トークンの総供給量を初期指定して
-  // JPQコントラクトのABIやバイトコードを持つトランザクションを構成し
-  // トランザクションをブロードキャストしてデプロイする
-  const JPYcoin = await hre.ethers.deployContract("JPYcoin",[10**11]);
-  // デプロイの完了を待つ
-  await JPYcoin.waitForDeployment();
-  // トークン販売コントラクトをデプロイする
-    //    (1ETH = 408000円 = 408000JPQ)
-  const TokenSale = await hre.ethers.deployContract("TokenSale",[JPYcoin, deployer.address, 408000]);
-  await TokenSale.waitForDeployment();
-  console.log("TokenSaleコントラクトアドレス:", TokenSale.address);
-}
+module.exports = buildModule("JPYFaucet", (m) => {
+  const JPYFaucet = m.contract("JPYFaucet", [JPYcoin, 1000]);
+  return { JPYFaucet };
+});
 
-// 上で定義した main関数を実行する
-main()
-  // 正常終了の場合
-  .then(() => process.exit(0))
-  // 以上終了の場合
-  .catch((error) => {
-    console.error(error);
-    process.exit(1);
-  });
 ```
 
 ### ローカルノードへのデプロイ
 
 ```bash
-npx hardhat run scripts/deploy.js --network localhost
+npx hardhat ignition deploy ignition/modules/JPYFaucet.js --network localhost
+
+=>
+Mined block #50
+  Block: 0x277ca31e023da108c95774d21e7bff0a858eb6291e2fa3b0884af62097ae0dab
+    Base fee: 1271687
+    Transaction:           0x0c072e73b1668c603f58804c4c922bfbc96b1aa04ecb83edf9dbbfc433f14b35
+      Contract deployment: <UnrecognizedContract>
+      Contract address:    0xe7f1725e7734ce288f8367e1bb143e90bb3f0512
+      From:                0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266
+      Value:               0 ETH
+      Gas used:            597738 of 597738
 ```
